Tests improved. Problems with ID and parent ID with category

--- a/src/test/resources/joomlajavaapi.properties
+++ b/src/test/resources/joomlajavaapi.properties
@@ -1,7 +1,7 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:8889/joomlajavaapi?zeroDateTimeBehavior=convertToNull
-jdbc.username=joomlajavaapi
-jdbc.password=joomlajavaapi
+jdbc.driverClassName=org.hsqldb.jdbcDriver
+jdbc.url=jdbc:hsqldb:mem:aname;MODE=MySQL
+jdbc.username=sa
+jdbc.password=
 
 joomladb.prefixtable=c4gul
 
