--- a/.hgignore
+++ b/.hgignore
@@ -10,6 +10,8 @@ syntax: regexp
 #----------------------------------------------------------------------------
 syntax: regexp
 ^common/target$
+glob:.idea/*
+glob:out/*
 
 #-------------------------------------
 # Use global syntax
