--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
             <version>3.1.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.1</version>
+        </dependency>
+
     </dependencies>
 
 
